--- a/index.html
+++ b/index.html
@@ -2,37 +2,13 @@
 <html lang="en US">
 <head>
   <title> "Justin's Webpage" </title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="StyleSheet.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-  #assignments{
-    font-family: Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  #assignments td, #assignments th{
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: center;
-  }
-  #assignments tr:nth-child(even)
-  {background-color: #FFE0B2;}
-  #assignments tr:hover{background-color:#FFCC80;}
-  #assignments th{
-  	padding: 40px;
-    padding-side: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    text-align: center;
-    background-color: #E65100;
-    color: #FFF3E0;
-  }
-</style>
 </head>
 
 <body>
   <h1> Justin Thai</h1>
-  <img src="headshot.jpg" alt="headshot">
+  <img src="images/headshot.jpg" alt="headshot">
   <div style="overflow-x:auto;">
   <table id="assignments">
   <tr>
