style tweaks and added cs.gsu link

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-  <h1> Justin Thai</h1>
-  <img src="images/headshot.jpg" alt="headshot">
+  <h1 class="center"> Justin Thai</h1>
+  <img src="images/headshot.jpg" alt="headshot" class="center">
+  <a href="http://www.cs.gsu.edu/" target="_blank"> http://www.cs.gsu.edu/</a>
   <div style="overflow-x:auto;">
   <table id="assignments">
   <tr>
