Fixed name and link positioning

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!doctype html>
 <html lang="en US">
 <head>
-  <title> "Justin's Webpage" </title>
+  <title> Justin's Amazing Webpage </title>
   <link rel="stylesheet" type="text/css" href="StyleSheet.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-  <h1 class="center"> Justin Thai</h1>
-  <img src="images/headshot.jpg" alt="headshot" class="center">
-  <a href="http://www.cs.gsu.edu/" target="_blank"> http://www.cs.gsu.edu/</a>
+  <h1 class="centeredHeader"> Justin Thai</h1>
+  <img src="images/headshot.jpg" alt="headshot" class="center" id="headshot">
+  
+  <p class="centeredLink">
+	<a href="http://www.cs.gsu.edu/"  target="_blank"> http://www.cs.gsu.edu/ </a>
+  </p>
+  
   <div style="overflow-x:auto;">
   <table id="assignments">
   <tr>
