--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 <body>
   <h1 class="centeredHeader"> Justin Thai</h1>
   <img src="images/headshot.jpg" alt="headshot" class="center" id="headshot">
-  
-  <p class="centeredLink">
-	<a href="http://www.cs.gsu.edu/"  target="_blank"> http://www.cs.gsu.edu/ </a>
-  </p>
+  <center><a href="http://www.cs.gsu.edu/"  target="_blank" class="fancy"> http://www.cs.gsu.edu/ </a></center>
   
   <div style="overflow-x:auto;">
   <table id="assignments">
@@ -34,14 +31,14 @@
   </tr>
 </table>
 </div>
-
+<p class="centeredLink">
 <h1>Hobbies/Interests</h1>
 <ul>
-    <li>Video Games  </li>
+    <li>Video Games</li>
     <li>Anime </li>
     <li>Hiking </li>
   </ul>
-
+</p>
 
 
 </body>
