--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <h1 class="centeredHeader"> Justin Thai</h1>
   <img src="images/headshot.jpg" alt="headshot" class="center" id="headshot">
-  <center><a href="http://www.cs.gsu.edu/"  target="_blank" class="fancy"> http://www.cs.gsu.edu/ </a></center>
+  <div style="text-align: center" class="rcorners">
+  <a href="http://www.cs.gsu.edu/"  target="_blank" class="fancy"> http://www.cs.gsu.edu/ </a>
+  </div>
   
   <div style="overflow-x:auto;">
   <table id="assignments">
@@ -31,14 +33,14 @@
   </tr>
 </table>
 </div>
-<p class="centeredLink">
+
 <h1>Hobbies/Interests</h1>
 <ul>
     <li>Video Games</li>
     <li>Anime </li>
     <li>Hiking </li>
   </ul>
-</p>
+
 
 
 </body>
