Fixed Centering/sizing on image and link

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en US">
+<html lang="en">
 <head>
   <title> Justin's Amazing Webpage </title>
   <link rel="stylesheet" type="text/css" href="StyleSheet.css">
@@ -7,13 +7,16 @@
 </head>
 
 <body>
-  <h1 class="centeredHeader"> Justin Thai</h1>
-  <img src="images/headshot.jpg" alt="headshot" class="center" id="headshot">
-  <div style="text-align: center" class="rcorners">
-  <a href="http://www.cs.gsu.edu/"  target="_blank" class="fancy"> http://www.cs.gsu.edu/ </a>
-  </div>
+  <div class="reference">
+  <h1 class="reference"> Justin Thai</h1>
   
-  <div style="overflow-x:auto;">
+  <img id="headshot" src="images/headshot.jpg" alt="headshot" style="width: 30%"/>
+  
+  <p class="reference">
+  <a href="http://www.cs.gsu.edu/"  target="_blank"> http://www.cs.gsu.edu/ </a>
+  </p>
+ </div>
+ 
   <table id="assignments">
   <tr>
     <th>Assignment</th>
@@ -32,14 +35,14 @@
     <td>filler</td>
   </tr>
 </table>
-</div>
+
 
 <h1>Hobbies/Interests</h1>
 <ul>
     <li>Video Games</li>
     <li>Anime </li>
     <li>Hiking </li>
-  </ul>
+</ul>
 
 
 
