added in extra lists along with styling changes

--- a/index.html
+++ b/index.html
@@ -7,44 +7,49 @@
 </head>
 
 <body>
-  <div class="reference">
-  <h1 class="reference"> Justin Thai</h1>
+  <div class="profile">
+  <h1 class="profile"> Justin Thai</h1>
   
-  <img id="headshot" src="images/headshot.jpg" alt="headshot" style="width: 30%"/>
+  <img id="headshot" src="images/headshot.jpg" alt="headshot"/>
   
-  <p class="reference">
-  <a href="http://www.cs.gsu.edu/"  target="_blank"> http://www.cs.gsu.edu/ </a>
+  <p class="profile">
+  <a class="fancy" href="http://www.cs.gsu.edu/"  target="_blank"> http://www.cs.gsu.edu/ </a>
   </p>
  </div>
- 
+ <div class="table">
   <table id="assignments">
   <tr>
-    <th>Assignment</th>
-    <th>Link</th>
+    <th>Assignments</th>
   </tr>
   <tr>
-    <td>Assignment1</td>
-    <td>filler</td>
+    <td><a href="https://justinthai.github.io">Assignment1</td>
   </tr>
   <tr>
     <td>Assignment2</td>
-    <td>filler</td>
   </tr>
   <tr>
   	<td>Assignment3</td>
-    <td>filler</td>
   </tr>
 </table>
-
-
-<h1>Hobbies/Interests</h1>
+</div>
+<div class="hobbies">
+<h2>Hobbies/Interests</h2>
 <ul>
-    <li>Video Games</li>
-    <li>Anime </li>
-    <li>Hiking </li>
+    <li><a href="https://www.gamespot.com/reviews/" target="_blank"> Video Games </li>
+    <li><a href="https://www.anime-planet.com/anime/watch-online/" target="_blank">Anime </a></li>
+    <li><a href="https://www.atlantatrails.com/hiking-trails/north-georgia-hiking-trails-our-top-10-favorite-hikes/" target="_blank"> Hiking</a> </li>
+	<li>Painting/Drawing </li>
 </ul>
 
 
 
+<h2>Some Songs I like</h2>
+<ul>
+	<li>GHOST! - Kid Cudi</li>
+	<li>Runaway - Kanye West</li>
+	<li>Golden Girl - Frank Ocean</li>
+	<li>Me, Myself, & I - De La Soul</li>
+	<li>Smile Upon Me - Passion Pit</li>
+</div>
 </body>
 </html>
