--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
   <a class="fancy" href="http://www.cs.gsu.edu/"  target="_blank"> http://www.cs.gsu.edu/ </a>
   </p>
  </div>
+ 
+ 
  <div class="table">
   <table id="assignments">
   <tr>
     <th>Assignments</th>
   </tr>
   <tr>
-    <td><a href="https://justinthai.github.io">Assignment1</td>
+    <td><a href="https://justinthai.github.io">Assignment1 </a> </td>
   </tr>
   <tr>
     <td>Assignment2</td>
@@ -32,24 +34,25 @@
   </tr>
 </table>
 </div>
+
 <div class="hobbies">
-<h2>Hobbies/Interests</h2>
+<h2>Hobbies & Interests</h2>
 <ul>
-    <li><a href="https://www.gamespot.com/reviews/" target="_blank"> Video Games </li>
-    <li><a href="https://www.anime-planet.com/anime/watch-online/" target="_blank">Anime </a></li>
+    <li><a href="https://www.gamespot.com/reviews/" target="_blank"> Video Games </a> </li>
+    <li><a href="https://www.anime-planet.com/anime/watch-online/" target="_blank">Anime </a> </li>
     <li><a href="https://www.atlantatrails.com/hiking-trails/north-georgia-hiking-trails-our-top-10-favorite-hikes/" target="_blank"> Hiking</a> </li>
-	<li>Painting/Drawing </li>
+	<li>Painting & Drawing </li>
 </ul>
-
-
 
 <h2>Some Songs I like</h2>
 <ul>
-	<li>GHOST! - Kid Cudi</li>
-	<li>Runaway - Kanye West</li>
-	<li>Golden Girl - Frank Ocean</li>
-	<li>Me, Myself, & I - De La Soul</li>
-	<li>Smile Upon Me - Passion Pit</li>
+	<li>GHOST! -- Kid Cudi</li>
+	<li>Runaway -- Kanye West</li>
+	<li>Golden Girl -- Frank Ocean</li>
+	<li>Me, Myself, & I -- De La Soul</li>
+	<li>Smile Upon Me -- Passion Pit</li>
+</ul>
 </div>
+
 </body>
 </html>
