--- a/index.html
+++ b/index.html
@@ -54,5 +54,23 @@
 </ul>
 </div>
 
+<div class="biography">
+<h2>Biography</h2>
+<ul>
+	<li>Education
+		<ul>
+			<li>Georgia State University</li>
+			<li>Georgia Gwinnett College</li>
+		</ul>
+	</li>
+	
+	<li>Job History
+		<ol>
+			<li>Gwinnett Complete Home Service</li>
+			<li>Furniture Outlet</li>
+	</li>
+</div>
+
+
 </body>
 </html>
