added quote and fixed colors

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 <body>
   <div class="profile">
-  <h1 class="profile"> Justin Thai</h1>
+  
   
   <img id="headshot" src="images/headshot.jpg" alt="headshot"/>
-  
-  <p class="profile">
+  <h1 class="profile"> Justin Thai</h1>
+  <p class=>
   <a class="fancy" href="http://www.cs.gsu.edu/"  target="_blank"> http://www.cs.gsu.edu/ </a>
   </p>
  </div>
@@ -36,39 +36,43 @@
 </div>
 
 <div class="hobbies">
-<h2>Hobbies & Interests</h2>
-<ul>
-    <li><a href="https://www.gamespot.com/reviews/" target="_blank"> Video Games </a> </li>
-    <li><a href="https://www.anime-planet.com/anime/watch-online/" target="_blank">Anime </a> </li>
-    <li><a href="https://www.atlantatrails.com/hiking-trails/north-georgia-hiking-trails-our-top-10-favorite-hikes/" target="_blank"> Hiking</a> </li>
-	<li>Painting & Drawing </li>
-</ul>
+	<h2>Hobbies & Interests</h2>
+	<ul>
+		<li><a href="https://www.gamespot.com/reviews/" target="_blank"> Video Games </a> </li>
+		<li><a href="https://www.anime-planet.com/anime/watch-online/" target="_blank">Anime </a> </li>
+		<li><a href="https://www.atlantatrails.com/hiking-trails/north-georgia-hiking-trails-our-top-10-favorite-hikes/" target="_blank"> Hiking</a> </li>
+		<li>Painting & Drawing </li>
+	</ul>
 
-<h2>Some Songs I like</h2>
-<ul>
-	<li>GHOST! -- Kid Cudi</li>
-	<li>Runaway -- Kanye West</li>
-	<li>Golden Girl -- Frank Ocean</li>
-	<li>Me, Myself, & I -- De La Soul</li>
-	<li>Smile Upon Me -- Passion Pit</li>
-</ul>
+	<h2>Some Songs I like</h2>
+	<ul>
+		<li>GHOST! - Kid Cudi</li>
+		<li>Runaway - Kanye West</li>
+		<li>Golden Girl - Frank Ocean</li>
+		<li>Me, Myself, & I - De La Soul</li>
+		<li>Smile Upon Me  - Passion Pit</li>
+	</ul>
 </div>
 
 <div class="biography">
-<h2>Biography</h2>
-<ul>
-	<li>Education
-		<ul>
-			<li>Georgia State University</li>
-			<li>Georgia Gwinnett College</li>
-		</ul>
-	</li>
+	<h2>Biography</h2>
+	<ul>
+		<li><span class="title">Education</span>
+			<ul>
+				<li>Georgia State University</li>
+				<li>Georgia Gwinnett College</li>
+			</ul>
+		</li>
 	
-	<li>Job History
-		<ol>
-			<li>Gwinnett Complete Home Service</li>
-			<li>Furniture Outlet</li>
-	</li>
+		<li><span class="title">Job History</span>
+			<ol>
+				<li>Gwinnett Complete Home Service</li>
+				<li>Furniture Outlet</li>
+		</li>
+</div>
+
+<div id="quote">
+	<h3>"Love is a serious mental disease." - Plato</h3>
 </div>
 
 
