final touches for assignment1

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 
 <body>
-  <div class="profile">
-  
-  
+ <div class="profile">
   <img id="headshot" src="images/headshot.jpg" alt="headshot"/>
   <h1 class="profile"> Justin Thai</h1>
   <p class=>
@@ -18,7 +16,7 @@
  </div>
  
  
- <div class="table">
+<div class="table">
   <table id="assignments">
   <tr>
     <th>Assignments</th>
@@ -46,9 +44,9 @@
 
 	<h2>Some Songs I like</h2>
 	<ul>
-		<li>GHOST! - Kid Cudi</li>
-		<li>Runaway - Kanye West</li>
+		<li><span class="specialwords">GHOST!</span> - Kid Cudi</li>
 		<li>Golden Girl - Frank Ocean</li>
+		<li><span class="specialwords">Runaway</span> - Kanye West</li>
 		<li>Me, Myself, & I - De La Soul</li>
 		<li>Smile Upon Me  - Passion Pit</li>
 	</ul>
@@ -59,7 +57,8 @@
 	<ul>
 		<li><span class="title">Education</span>
 			<ul>
-				<li>Georgia State University</li>
+				<li><span class="specialwords"> Computer Science </span> Major at <span class="specialwords">
+				Georgia State </span>University</li>
 				<li>Georgia Gwinnett College</li>
 			</ul>
 		</li>
