--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <title> Justin's Amazing Webpage </title>
   <link rel="stylesheet" type="text/css" href="StyleSheet.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
 </head>
 
 <body>
  <div class="profile">
   <img id="headshot" src="images/headshot.jpg" alt="headshot"/>
   <h1 class="profile"> Justin Thai</h1>
-  <p class=>
+  <p>
   <a class="fancy" href="http://www.cs.gsu.edu/"  target="_blank"> http://www.cs.gsu.edu/ </a>
   </p>
  </div>
@@ -67,7 +68,9 @@
 			<ol>
 				<li>Gwinnett Complete Home Service</li>
 				<li>Furniture Outlet</li>
+			</ol>
 		</li>
+	</ul>
 </div>
 
 <div id="quote">
