--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title> Justin's Amazing Webpage </title>
-  <link rel="stylesheet" type="text/css" href="StyleSheet.css">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
 </head>
