--- a/index.html
+++ b/index.html
@@ -3,79 +3,77 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-  <title> Justin's Amazing Webpage </title>
+  <title> Justin Thai </title>
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 <body>
- <div class="profile">
+ 
   <img id="headshot" src="images/headshot.jpg" alt="headshot"/>
-  <h1 class="profile"> Justin Thai</h1>
+  <h1> Justin Thai</h1>
   <p>
-  <a class="fancy" href="http://www.cs.gsu.edu/"  target="_blank"> http://www.cs.gsu.edu/ </a>
+  <a href="http://www.cs.gsu.edu/"  target="_blank"> http://www.cs.gsu.edu/ </a>
   </p>
- </div>
- 
- 
-<div class="table">
-  <table id="assignments">
-  <tr>
-    <th>Assignments</th>
-  </tr>
-  <tr>
-    <td><a href="https://justinthai.github.io">Assignment1 </a> </td>
-  </tr>
-  <tr>
-    <td>Assignment2</td>
-  </tr>
-  <tr>
-  	<td>Assignment3</td>
-  </tr>
-</table>
-</div>
-
-<div class="hobbies">
-	<h2>Hobbies & Interests</h2>
-	<ul>
-		<li><a href="https://www.gamespot.com/reviews/" target="_blank"> Video Games </a> </li>
-		<li><a href="https://www.anime-planet.com/anime/watch-online/" target="_blank">Anime </a> </li>
-		<li><a href="https://www.atlantatrails.com/hiking-trails/north-georgia-hiking-trails-our-top-10-favorite-hikes/" target="_blank"> Hiking</a> </li>
-		<li>Painting & Drawing </li>
-	</ul>
-
-	<h2>Some Songs I like</h2>
-	<ul>
-		<li><span class="specialwords">GHOST!</span> - Kid Cudi</li>
-		<li>Golden Girl - Frank Ocean</li>
-		<li><span class="specialwords">Runaway</span> - Kanye West</li>
-		<li>Me, Myself, & I - De La Soul</li>
-		<li>Smile Upon Me  - Passion Pit</li>
-	</ul>
-</div>
-
-<div class="biography">
-	<h2>Biography</h2>
-	<ul>
-		<li><span class="title">Education</span>
-			<ul>
-				<li><span class="specialwords"> Computer Science </span> Major at <span class="specialwords">
-				Georgia State </span>University</li>
-				<li>Georgia Gwinnett College</li>
-			</ul>
-		</li>
+  
+  <hr>
+  
+  <h2> Career Objective </h2>
+  <p> To build a long-term career in developing, while growing my professional skilsl in a dynamic workplace. </p>
 	
-		<li><span class="title">Job History</span>
-			<ol>
-				<li>Gwinnett Complete Home Service</li>
-				<li>Furniture Outlet</li>
-			</ol>
-		</li>
+	
+  <hr>
+  
+  <h2> Education</h2>
+  <h3> Georgia State University</h3>
+ 
+   
+	
+	<p> Bachelor of Science, Computer Science </p>
+	<p> 3.4 GPA	</p>
+	
+	
+	
+		<p> December 2018</p>
+		
+	
+  
+  
+  <hr>
+  
+  <h2> Relevant Courses </h2>
+  
+	
+	<ul>
+		<li>Web Programming </li>
+		<li>Database Systems </li>
+		<li>Operating Systems </li>
+		<li>Computer Networks </li>
+		<li>Design & Analysis: Algorithms </li>
 	</ul>
-</div>
 
-<div id="quote">
-	<h3>"Love is a serious mental disease." - Plato</h3>
-</div>
+  
+ <hr>
+ 
+ <h2> Tools </h2>
+ 
+ <h3>Languages: </h3>
+	<p>Java, HTML, CSS, Javascript, PHP, SQL</p>
+	
+	
+	
+<hr>
+
+<h2> Work Experience </h2>
+
+<h3> Gwinnett Complete Home Service</h3>
+<p> Apprentice</p>
+	<ul>
+	  <li>Interact with customers and answer questions</li>
+	  <li>Help with demolition</li>
+	  <li>Painting</li>
+	  </li>Drywall installation</li>
+	</ul>
+
 
 
 </body>
