--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <hr>
   
   <h2> Career Objective </h2>
-  <p> To build a long-term career in developing, while growing my professional skilsl in a dynamic workplace. </p>
+  <p> To build a long-term career in developing, while growing my professional skills in a dynamic workplace. </p>
 	
 	
   <hr>
